img's have max-width: 100% to avoid overflowing of big images

--- a/blag/static/style.css
+++ b/blag/static/style.css
@@ -48,6 +48,10 @@ aside {
     color: var(--foreground-dim);
 }
 
+img {
+    max-width: 100%;
+}
+
 h1,
 h2,
 h3,
